--- a/week2_cleanning_data.ipynb
+++ b/week2_cleanning_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dd4a5f77-d1c5-4efa-9c17-5ca741cf621b",
    "metadata": {},
    "outputs": [
@@ -28,22 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "53b12599-ec7a-428d-89b0-0b94fa3b567b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m df\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mDataFrame(age,columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df=pd.DataFrame(age,columns=['age'])"
@@ -51,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a3b1f0bd-31d0-4369-b159-d925325f8feb",
    "metadata": {},
    "outputs": [
@@ -124,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5d77ce28-b629-4ca5-a63c-61556eaa57fd",
    "metadata": {},
    "outputs": [
@@ -142,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b1d5d022-f349-4afa-90de-8d69cdf5fd1c",
    "metadata": {},
    "outputs": [
@@ -222,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c071e2f2-89c6-4d1a-b05b-f0ee9fa1bcfd",
    "metadata": {},
    "outputs": [
@@ -302,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "274eaf6e-013b-4e09-b5ba-c6a73ff79bce",
    "metadata": {},
    "outputs": [
@@ -323,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6661eb0a-13db-45c2-8b69-06d425f890f3",
    "metadata": {},
    "outputs": [
@@ -409,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ecbdcd96-2a33-4dbb-b06b-5baf0d08223c",
    "metadata": {},
    "outputs": [
@@ -489,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "92af42c9-1445-490f-b8e0-3a31df2aff41",
    "metadata": {},
    "outputs": [
@@ -511,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b0783de3-1a99-48e7-bd2a-5c416c6618e1",
    "metadata": {},
    "outputs": [],
@@ -521,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0bd49cb5-3086-4649-a285-3e9fd813d8fc",
    "metadata": {},
    "outputs": [
@@ -606,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "de53ec6b-9d82-4504-935b-abe7c36e21b9",
    "metadata": {},
    "outputs": [
@@ -692,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a208d744-22cb-4f18-b8b8-f0289b6c6ec8",
    "metadata": {},
    "outputs": [
@@ -771,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ca6bc911-ac92-478a-bb50-68be22c67526",
    "metadata": {},
    "outputs": [],
@@ -782,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9a7cb093-66ee-4878-a7c6-004b69a3ec61",
    "metadata": {},
    "outputs": [
@@ -867,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "eb17b7dc-1a5e-465e-874a-89deb671b777",
    "metadata": {},
    "outputs": [],
@@ -877,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3c09cd49-29d0-4e92-91fc-cc273eee4508",
    "metadata": {},
    "outputs": [
@@ -969,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "d28fafbe-40fd-4244-bce4-27f79dd54810",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "67a38734-407a-4728-9ee7-d35239526b21",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "668b2bff-a379-4b44-a881-32ef5fe213d5",
    "metadata": {},
    "outputs": [],
@@ -1145,23 +1133,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "d8ed7cef-1d82-4b42-ac61-7409f02c9260",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m df\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Yen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Amorn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>77</td>\n",
+       "      <td>kate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>99</td>\n",
+       "      <td>Ning</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>45</td>\n",
+       "      <td>Frame</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age   Name\n",
+       "0   35    Yen\n",
+       "1    9  Amorn\n",
+       "2   77   kate\n",
+       "3   99   Ning\n",
+       "4   45  Frame"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#read the csv\n",
     "df = pd.read_csv('data.csv')\n",
     "df"
    ]
@@ -1169,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b07a1eb5",
+   "id": "5f8f6970-0cde-4b5d-8200-3fe3bb26d7ae",
    "metadata": {},
    "outputs": [],
    "source": []
